
===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.4.0
-------------
* API
  + Add hwloc/cpukinds.h for reporting information about hybrid CPUs.
    - Use Linux cpufreq frequencies to rank cores by efficiency.
    - Use x86 CPUID hybrid leaf to identify Intel Atom and Core cores.
    - Use the Windows native EfficiencyClass to separate kinds.
* Backends
  + Properly handle Linux kernel 5.10+ exposing ACPI HMAT information
    with knowledge of Generic Initiators.
* Tools
  + lstopo has new --cpukinds and --no-cpukinds options for showing
    CPU kinds or not in textual and graphical modes respectively.
  + hwloc-calc has a new --cpukind option for filtering PUs by kind.
  + hwloc-annotate has a new cpukind command for modifying CPU kinds.


Version 2.3.0
-------------
* API
  + Add hwloc/memattrs.h for exposing latency/bandwidth information
    between initiators (CPU sets for now) and target NUMA nodes,
    typically on heterogeneous platforms.
    - When available, bandwidths and latencies are read from the ACPI HMAT
      table exposed by Linux kernel 5.2+.
    - Attributes may also be customized to expose user-defined performance
      information.
  + Add hwloc_get_local_numanode_objs() for listing NUMA nodes that are
    local to some locality.
  + The new topology flag HWLOC_TOPOLOGY_FLAG_IMPORT_SUPPORT causes
    support arrays to be loaded from XML exported with hwloc 2.3+.
    - hwloc_topology_get_support() now returns an additional "misc"
      array with feature "imported_support" set when support was imported.
  + Add hwloc_topology_refresh() to refresh internal caches after modifying
    the topology and before consulting the topology in a multithread context.
* Backends
  + Add a ROCm SMI backend and a hwloc/rsmi.h helper file for getting