@@ -2088,10 +2088,17 @@ as reported by <tt>cpufreq</tt> drivers on Linux.
 <dd>The base operating frequency of the core,
 as reported by some <tt>cpufreq</tt> drivers on Linux (e.g. <tt>intel_pstate</tt>).
 </dd>
-<dt>CoreType (x86)</dt>
+<dt>CoreType (x86, Linux)</dt>
 <dd>A string describing the kind of core,
 currently <tt>IntelAtom</tt> or <tt>IntelCore</tt>,
-as reported by the x86 CPUID instruction on some Intel processors.
+as reported by the x86 CPUID instruction and future Linux kernels
+on some Intel processors.
+</dd>
+<dt>LinuxCPUTyle (Linux)</dt>
+<dd>The Linux-specific CPU type found in sysfs,
+such as <tt>intel_atom_0</tt>,
+as reported by the Linux kernel 5.11
+on some Intel processors.
 </dd>
 </dl>
 
