@@ -4165,7 +4165,7 @@ look_sysfscpu(struct hwloc_topology *topology,
   hwloc_bitmap_t cpuset; /* Set of cpus for which we have topology information */
   hwloc_bitmap_t online_set; /* Set of online CPUs if easily available, or NULL */
   struct hwloc_linux_cpufreqs cpufreqs_max,  cpufreqs_base;
-#define CPU_TOPOLOGY_STR_LEN 128
+#define CPU_TOPOLOGY_STR_LEN 512
   char str[CPU_TOPOLOGY_STR_LEN];
   DIR *dir;
   int i,j;
@@ -4591,6 +4591,45 @@ look_sysfscpu(struct hwloc_topology *topology,
   hwloc_linux_cpufreqs_destroy(&cpufreqs_base);
   hwloc_bitmap_free(cpuset);
   hwloc_bitmap_free(online_set);
+
+  dir = hwloc_opendir("/sys/devices/system/cpu/types", data->root_fd); /* "types" is not in /sys/bus/cpu */
+  if (dir) {
+    struct dirent *dirent;
+    while ((dirent = readdir(dir)) != NULL) {
+      hwloc_bitmap_t cpukind_cpuset;
+
+      if (*dirent->d_name == '.')
+        continue;
+
+      sprintf(str, "/sys/devices/system/cpu/types/%s/cpumap", dirent->d_name);
+      cpukind_cpuset = hwloc__alloc_read_path_as_cpumask(str, data->root_fd);
+      if (cpukind_cpuset) {
+        if (!hwloc_bitmap_iszero(cpukind_cpuset)) {
+          struct hwloc_info_s infos[2];
+          unsigned nr_infos = 0;
+          /* expose a convenient CoreType if any */
+          if (!strncmp(dirent->d_name, "intel_atom", 10)) {
+            infos[nr_infos].name = (char*) "CoreType";
+            infos[nr_infos].value = (char*) "IntelAtom";
+            nr_infos++;
+          } else if (!strncmp(dirent->d_name, "intel_core", 10)) {
+            infos[nr_infos].name = (char*) "CoreType";
+            infos[nr_infos].value = (char*) "IntelCore";
+            nr_infos++;
+          }
+          /* then expose the raw LinuxCPUType */
+          infos[nr_infos].name = (char*) "LinuxCPUType";
+          infos[nr_infos].value = dirent->d_name;
+          nr_infos++;
+
+          hwloc_internal_cpukinds_register(topology, cpukind_cpuset, HWLOC_CPUKIND_EFFICIENCY_UNKNOWN, infos, nr_infos, 0);
+        } else {
+          hwloc_bitmap_free(cpukind_cpuset);
+        }
+      }
+    }
+    closedir(dir);
+  }
 
   return 0;
 }
